--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section>
       <h2>記録一覧</h2>
-      <button id="copy-btn">すべての記録をコピー</button>
+      <button id="copy-all-btn">記録をコピー</button>
       <div id="records"></div>
     </section>
   </div>
